[project]
name = "invest"
version = "0.1.0"
description = "Investment analysis and research tools"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "jupyter",
    "loguru",
    "yfinance",
    "click",
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invest"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto" 